Esto es todo chat gpt lo he puesto para comprobar cosas

--- a/index.html
+++ b/index.html
@@ -1,4 +1,356 @@
-aaaaaaa
-ME CAGO EN DIOS
-<a href=""></a>
-a
+<!doctype html>
+<html lang="es">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Panel administrativo - Biblioteca IES</title>
+  <meta name="description" content="Portada de la herramienta administrativa de la biblioteca del instituto. Accede a catálogo, préstamos, usuarios y estadísticas." />
+
+  <style>
+    :root{
+      --bg:#f6f8fa;
+      --card:#ffffff;
+      --primary:#0b5fff;
+      --muted:#6b7280;
+      --accent:#0ea5a4;
+      --radius:10px;
+      font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+      color-scheme: light;
+    }
+
+    *{box-sizing:border-box}
+    body{
+      margin:0;
+      background:linear-gradient(180deg,var(--bg),#eef2ff 120%);
+      color:#0f172a;
+      -webkit-font-smoothing:antialiased;
+      line-height:1.45;
+      padding:24px;
+    }
+
+    .container{
+      max-width:1100px;
+      margin:0 auto;
+    }
+
+    header{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:16px;
+      margin-bottom:20px;
+    }
+
+    .brand{
+      display:flex;
+      gap:12px;
+      align-items:center;
+      text-decoration:none;
+      color:inherit;
+    }
+
+    .logo{
+      width:56px;
+      height:56px;
+      background:linear-gradient(135deg,var(--primary),var(--accent));
+      border-radius:12px;
+      display:grid;
+      place-items:center;
+      color:#fff;
+      font-weight:700;
+      font-size:18px;
+      box-shadow:0 6px 18px rgba(11,95,255,0.12);
+    }
+
+    h1{
+      font-size:18px;
+      margin:0;
+    }
+    .sub{
+      font-size:13px;
+      color:var(--muted);
+      margin-top:2px;
+    }
+
+    .actions{
+      display:flex;
+      gap:8px;
+      align-items:center;
+    }
+
+    .user{
+      background:var(--card);
+      padding:8px 12px;
+      border-radius:999px;
+      display:flex;
+      gap:10px;
+      align-items:center;
+      box-shadow:0 2px 6px rgba(15,23,42,0.06);
+    }
+
+    .search{
+      margin:18px 0;
+      display:flex;
+      gap:12px;
+      align-items:center;
+    }
+
+    .search input{
+      flex:1;
+      padding:12px 14px;
+      border-radius:8px;
+      border:1px solid #e6e9ef;
+      background:var(--card);
+      font-size:15px;
+    }
+
+    .grid{
+      display:grid;
+      grid-template-columns: 1fr 360px;
+      gap:18px;
+      align-items:start;
+    }
+
+    .panel{
+      background:var(--card);
+      border-radius:var(--radius);
+      padding:18px;
+      box-shadow:0 6px 18px rgba(12,18,32,0.05);
+    }
+
+    .quick{
+      display:grid;
+      grid-template-columns:repeat(3,1fr);
+      gap:12px;
+    }
+
+    .card{
+      background:linear-gradient(180deg,#fff,#fbfdff);
+      border-radius:10px;
+      padding:12px;
+      display:flex;
+      gap:10px;
+      align-items:center;
+      cursor:pointer;
+      transition:transform .12s ease, box-shadow .12s ease;
+      border:1px solid #eff3ff;
+    }
+    .card:focus, .card:hover{
+      transform:translateY(-6px);
+      box-shadow:0 10px 30px rgba(11,95,255,0.06);
+      outline:none;
+    }
+    .card .icon{
+      background:linear-gradient(135deg,var(--primary),var(--accent));
+      color:white;
+      width:44px;height:44px;border-radius:8px;
+      display:grid;place-items:center;font-weight:700;
+      box-shadow:0 6px 14px rgba(11,95,255,0.12);
+    }
+    .card .title{font-weight:600}
+    .card .muted{font-size:13px;color:var(--muted)}
+
+    /* Right column */
+    .side .box{margin-bottom:12px;padding:12px;border-radius:10px;background:var(--card);border:1px solid #eef2ff}
+    .recent-list{list-style:none;padding:0;margin:0}
+    .recent-list li{padding:10px 8px;border-radius:8px;display:flex;justify-content:space-between;gap:8px}
+    .recent-list li + li{margin-top:8px}
+    .kpi{display:flex;gap:12px;flex-wrap:wrap}
+    .kpi .item{background:#fff;padding:12px;border-radius:8px;min-width:120px;border:1px solid #f1f5f9}
+
+    footer{margin-top:20px;text-align:center;color:var(--muted);font-size:13px}
+
+    @media (max-width:880px){
+      .grid{grid-template-columns:1fr}
+      .quick{grid-template-columns:repeat(2,1fr)}
+      .logo{width:48px;height:48px}
+    }
+  </style>
+</head>
+<body>
+  <div class="container" role="main">
+    <header>
+      <a class="brand" href="#" aria-label="Inicio - Biblioteca IES">
+        <div class="logo" aria-hidden="true">BI</div>
+        <div>
+          <h1>Panel administrativo</h1>
+          <div class="sub">Biblioteca IES — Herramienta de gestión</div>
+        </div>
+      </a>
+
+      <div class="actions" aria-hidden="false">
+        <div class="user" role="status" aria-live="polite">
+          <div style="font-weight:600">Admin</div>
+          <div style="color:var(--muted);font-size:13px">Instituto Público</div>
+        </div>
+      </div>
+    </header>
+
+    <div class="search" aria-label="barra de búsqueda del catálogo">
+      <input id="search" type="search" placeholder="Buscar por título, autor, ISBN, usuario..." aria-label="Buscar en el catálogo" />
+      <button onclick="document.getElementById('search').focus()" aria-label="Abrir búsqueda" style="padding:10px 14px;border-radius:8px;border:0;background:var(--primary);color:white">Buscar</button>
+    </div>
+
+    <div class="grid" aria-hidden="false">
+      <div>
+        <section class="panel" aria-labelledby="accesos">
+          <h2 id="accesos" style="margin-top:0">Accesos rápidos</h2>
+          <p style="margin:0 0 12px 0;color:var(--muted)">Navega por las tareas más comunes.</p>
+
+          <div class="quick" role="list">
+            <a class="card" href="#catalogo" role="listitem" aria-label="Catálogo">
+              <div class="icon" aria-hidden="true">📚</div>
+              <div>
+                <div class="title">Catálogo</div>
+                <div class="muted">Buscar y editar libros</div>
+              </div>
+            </a>
+
+            <a class="card" href="#prestamos" role="listitem" aria-label="Préstamos">
+              <div class="icon" aria-hidden="true">🔁</div>
+              <div>
+                <div class="title">Préstamos</div>
+                <div class="muted">Gestionar salidas/entregas</div>
+              </div>
+            </a>
+
+            <a class="card" href="#usuarios" role="listitem" aria-label="Usuarios">
+              <div class="icon" aria-hidden="true">👥</div>
+              <div>
+                <div class="title">Usuarios</div>
+                <div class="muted">Alumnos y profesorado</div>
+              </div>
+            </a>
+
+            <a class="card" href="#reservas" role="listitem" aria-label="Reservas">
+              <div class="icon" aria-hidden="true">📅</div>
+              <div>
+                <div class="title">Reservas</div>
+                <div class="muted">Reservas de sala o libros</div>
+              </div>
+            </a>
+
+            <a class="card" href="#informes" role="listitem" aria-label="Informes">
+              <div class="icon" aria-hidden="true">📈</div>
+              <div>
+                <div class="title">Informes</div>
+                <div class="muted">Estadísticas y exportar</div>
+              </div>
+            </a>
+
+            <a class="card" href="#config" role="listitem" aria-label="Ajustes">
+              <div class="icon" aria-hidden="true">⚙️</div>
+              <div>
+                <div class="title">Ajustes</div>
+                <div class="muted">Configuración del sistema</div>
+              </div>
+            </a>
+          </div>
+        </section>
+
+        <section class="panel" aria-labelledby="actividad" style="margin-top:14px">
+          <h2 id="actividad" style="margin-top:0">Actividad reciente</h2>
+          <p style="margin:0 0 12px 0;color:var(--muted)">Últimas acciones en la biblioteca</p>
+
+          <ul class="recent-list" aria-live="polite">
+            <li>
+              <div>
+                <div style="font-weight:600">Préstamo: "Cien años de soledad"</div>
+                <div style="font-size:13px;color:var(--muted)">Usuario: 12345 — 2 días ago</div>
+              </div>
+              <div style="color:var(--muted)">Préstamo</div>
+            </li>
+
+            <li>
+              <div>
+                <div style="font-weight:600">Alta usuario: María López</div>
+                <div style="font-size:13px;color:var(--muted)">Tutor: Gestión manual</div>
+              </div>
+              <div style="color:var(--muted)">Usuario</div>
+            </li>
+
+            <li>
+              <div>
+                <div style="font-weight:600">Libro agregado: "Programación en Python"</div>
+                <div style="font-size:13px;color:var(--muted)">ISBN: 978-0-00-000000</div>
+              </div>
+              <div style="color:var(--muted)">Catálogo</div>
+            </li>
+          </ul>
+        </section>
+      </div>
+
+      <aside class="side" aria-label="Panel lateral">
+        <div class="box panel" aria-labelledby="bienvenida">
+          <h3 id="bienvenida" style="margin:0">Bienvenido</h3>
+          <div id="greeting" style="color:var(--muted);margin-top:6px">—</div>
+          <div style="margin-top:12px;font-size:13px;color:var(--muted)">
+            Usuario: <strong id="username">Administrador</strong>
+          </div>
+        </div>
+
+        <div class="box panel" aria-labelledby="kpis">
+          <h4 id="kpis" style="margin:0 0 10px 0">Resumen rápido</h4>
+          <div class="kpi">
+            <div class="item">
+              <div style="font-size:20px;font-weight:700">1.245</div>
+              <div style="font-size:12px;color:var(--muted)">Libros</div>
+            </div>
+            <div class="item">
+              <div style="font-size:20px;font-weight:700">87</div>
+              <div style="font-size:12px;color:var(--muted)">Préstamos activos</div>
+            </div>
+            <div class="item">
+              <div style="font-size:20px;font-weight:700">512</div>
+              <div style="font-size:12px;color:var(--muted)">Usuarios</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="box panel" aria-labelledby="soporte">
+          <h4 id="soporte" style="margin:0 0 8px 0">Contacto</h4>
+          <div style="font-size:13px;color:var(--muted)">
+            Biblioteca IES — administración@ies.edu
+            <div style="margin-top:8px"><small>Tel: 123-456-789</small></div>
+          </div>
+        </div>
+      </aside>
+    </div>
+
+    <footer>
+      <div>© <span id="year"></span> Biblioteca IES — Instituto Público</div>
+      <div style="margin-top:6px">Diseño básico — personalízalo según tus necesidades</div>
+    </footer>
+  </div>
+
+  <script>
+    // Pequeño script para dinamizar la portada (puedes reemplazarlo por datos reales)
+    (function(){
+      const now = new Date();
+      const hour = now.getHours();
+      const greeting = document.getElementById('greeting');
+      const year = document.getElementById('year');
+      const userEl = document.getElementById('username');
+
+      year.textContent = now.getFullYear();
+
+      let sal;
+      if(hour < 12) sal = 'Buenos días';
+      else if(hour < 19) sal = 'Buenas tardes';
+      else sal = 'Buenas noches';
+
+      // Asumimos nombre de usuario de ejemplo. Reemplaza con variable real si la tienes.
+      const nombre = 'Administrador';
+      greeting.textContent = sal + ', ' + nombre + '. Último acceso: hace 3h';
+
+      // Puedes exponer funciones globales para la integración con backend
+      window.app = {
+        setUser(name){
+          userEl.textContent = name;
+          greeting.textContent = (hour < 12 ? 'Buenos días' : (hour < 19 ? 'Buenas tardes' : 'Buenas noches')) + ', ' + name + '.';
+        }
+      };
+    })();
+  </script>
+</body>
+</html>
