--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Biblioteca del Instituto - Panel Administrativo</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>BOOK.IES - Panel Administrativo</title>
+  <link rel="stylesheet" href="css.css">
 </head>
 <body>
   <header class="header">
     <div class="container top">
       <div class="brand">
-        <img src="logo.png" alt="Logo del Instituto">
-        <h1>Biblioteca IES Público “Antonio Sequeros”</h1>
+        <img src="logo.png" alt="Logo book.ies">
+        <h1>BOOK.IES · Biblioteca <br>IES “Antonio Sequeros”</h1>
       </div>
       <nav class="nav">
         <a href="index.html">Inicio</a>
@@ -20,10 +20,9 @@
       </nav>
     </div>
   </header>
-
   <main class="container">
     <section class="card">
-      <h2>Bienvenido al Panel Administrativo</h2>
+      <h2>Bienvenido al Panel Administrativo de book.ies</h2>
       <p>Esta herramienta permite al personal del instituto gestionar los recursos de la biblioteca de manera sencilla y centralizada.</p>
       <p>Desde aquí puedes:</p>
       <ul>
@@ -32,7 +31,6 @@
         <li>Visualizar la disponibilidad y el estado de cada copia.</li>
       </ul>
     </section>
-
     <section class="layout">
       <div class="main">
         <div class="card">
@@ -40,14 +38,12 @@
           <p>Accede al módulo de administración de préstamos para registrar nuevas operaciones o verificar devoluciones pendientes.</p>
           <a href="prestamos.html" class="btn">Ir a Gestión de Préstamos</a>
         </div>
-
         <div class="card">
           <h2>Catálogo de Libros y Ejemplares</h2>
           <p>Consulta todos los libros registrados, junto con sus ejemplares, estados físicos y disponibilidad.</p>
           <a href="libros.html" class="btn">Ver Catálogo</a>
         </div>
       </div>
-
       <aside class="sidebar">
         <div class="box card">
           <h3>Información General</h3>
@@ -55,7 +51,6 @@
           <p><strong>Ubicación:</strong> Guardamar del Segura, Alicante</p>
           <p><strong>Versión:</strong> 1.0 - Herramienta local de administración</p>
         </div>
-
         <div class="box card">
           <h3>Accesos Rápidos</h3>
           <ul>
@@ -67,9 +62,9 @@
       </aside>
     </section>
   </main>
-
   <footer class="footer">
-    <p>© 2025 Biblioteca IES Público “Antonio Sequeros” · Uso interno administrativo</p>
+    <p>© 2025 book.ies · Biblioteca IES Público “Antonio Sequeros” · Uso interno administrativo</p>
   </footer>
 </body>
 </html>
+
