--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BOOK.IES - Panel Administrativo</title>
   <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <!-- HEADER -->
   <header class="header">
-    <div class="container top">
+    <div class="header-inner">
       <div class="brand">
         <img src="logo.png" alt="Logo book.ies">
-        <h1>BOOK.IES · Biblioteca <br>IES “Antonio Sequeros”</h1>
+        <div>
+          <h1>BOOK.IES</h1>
+          <span>Biblioteca IES Antonio Sequeros</span>
+        </div>
       </div>
       <nav class="nav">
         <a href="index.html">Inicio</a>
@@ -20,51 +25,51 @@
       </nav>
     </div>
   </header>
-  <main class="container">
-    <section class="card">
-      <h2>Bienvenido al Panel Administrativo de book.ies</h2>
-      <p>Esta herramienta permite al personal del instituto gestionar los recursos de la biblioteca de manera sencilla y centralizada.</p>
-      <p>Desde aquí puedes:</p>
+
+  <!-- SIDEBAR -->
+  <aside class="sidebar">
+    <div class="sidebar-section">
+      <h3>Accesos rápidos</h3>
       <ul>
-        <li>Registrar, modificar o finalizar <strong>préstamos de ejemplares</strong>.</li>
-        <li>Consultar el <strong>catálogo de libros y sus ejemplares físicos</strong>.</li>
-        <li>Visualizar la disponibilidad y el estado de cada copia.</li>
+        <li><a href="prestamos.html">Registrar préstamo</a></li>
+        <li><a href="libros.html">Añadir libro</a></li>
+        <li><a href="alumnos.html">Ver alumnos</a></li>
+        <li><a href="configuracion.html">Configuración</a></li>
+        <li><a href="reportes.html">Reportes</a></li>
+        <li><a href="usuarios.html">Usuarios</a></li>
       </ul>
-    </section>
-    <section class="layout">
-      <div class="main">
+    </div>
+    <div class="sidebar-section">
+      <h3>Información</h3>
+      <p><strong>Centro:</strong> IES “Antonio Sequeros”</p>
+      <p><strong>Ubicación:</strong> Guardamar del Segura</p>
+      <p><strong>Versión:</strong> 1.0</p>
+    </div>
+  </aside>
+
+  <!-- CONTENIDO GENERAL -->
+  <div class="layout">
+    <main class="content">
+      <section class="card">
+        <h2>Bienvenido al Panel Administrativo</h2>
+        <p>Gestiona la biblioteca del centro de manera unificada y eficiente.</p>
+      </section>
+      <section class="grid">
         <div class="card">
           <h2>Gestión de Préstamos</h2>
-          <p>Accede al módulo de administración de préstamos para registrar nuevas operaciones o verificar devoluciones pendientes.</p>
-          <a href="prestamos.html" class="btn">Ir a Gestión de Préstamos</a>
+          <p>Controla préstamos activos y registra nuevas solicitudes.</p>
+          <a class="btn" href="prestamos.html">Ir a préstamos</a>
         </div>
         <div class="card">
-          <h2>Catálogo de Libros y Ejemplares</h2>
-          <p>Consulta todos los libros registrados, junto con sus ejemplares, estados físicos y disponibilidad.</p>
-          <a href="libros.html" class="btn">Ver Catálogo</a>
+          <h2>Catálogo</h2>
+          <p>Revisa todos los libros disponibles y su estado.</p>
+          <a class="btn" href="libros.html">Ver catálogo</a>
         </div>
-      </div>
-      <aside class="sidebar">
-        <div class="box card">
-          <h3>Información General</h3>
-          <p><strong>Centro:</strong> IES Público “Antonio Sequeros”</p>
-          <p><strong>Ubicación:</strong> Guardamar del Segura, Alicante</p>
-          <p><strong>Versión:</strong> 1.0 - Herramienta local de administración</p>
-        </div>
-        <div class="box card">
-          <h3>Accesos Rápidos</h3>
-          <ul>
-            <li><a href="prestamos.html">Registrar préstamo</a></li>
-            <li><a href="libros.html">Añadir nuevo libro</a></li>
-            <li><a href="#">Ver alumnos registrados</a></li>
-          </ul>
-        </div>
-      </aside>
-    </section>
-  </main>
-  <footer class="footer">
-    <p>© 2025 book.ies · Biblioteca IES Público “Antonio Sequeros” · Uso interno administrativo</p>
-  </footer>
+      </section>
+    </main>
+    <footer class="footer">
+      © 2025 BOOK.IES — Biblioteca IES Antonio Sequeros
+    </footer>
+  </div>
 </body>
 </html>
-
