--- a/index.html
+++ b/index.html
@@ -29,20 +29,22 @@
   <!-- SIDEBAR -->
   <aside class="sidebar">
     <div class="sidebar-section">
+
+    <u>
       <h3>Accesos rápidos</h3>
-      <ul>
-        <li><a href="prestamos.html">Registrar préstamo</a></li>
-        <li><a href="libros.html">Añadir libro</a></li>
-        <li><a href="alumnos.html">Ver alumnos</a></li>
-        <li><a href="configuracion.html">Configuración</a></li>
-        <li><a href="reportes.html">Reportes</a></li>
-        <li><a href="usuarios.html">Usuarios</a></li>
-      </ul>
+    </u>
+      <a href="prestamos.html">Registrar préstamo</a>
+      <a href="libros.html">Añadir libro</a>
+      <a href="alumnos.html">Ver alumnos</a>
+      <a href="configuracion.html">Configuración</a>
+      <a href="reportes.html">Reportes</a>
+      <a href="usuarios.html">Usuarios</a>
     </div>
     <div class="sidebar-section">
+      <br>
       <h3>Información</h3>
       <p><strong>Centro:</strong> IES “Antonio Sequeros”</p>
-      <p><strong>Ubicación:</strong> Guardamar del Segura</p>
+      <p><strong>Ubicación:</strong> Almoradi (Alicante) </p>
       <p><strong>Versión:</strong> 1.0</p>
     </div>
   </aside>
