--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="header">
     <div class="header-inner">
       <div class="brand">
-        <img src="logo.png" alt="Logo book.ies">
+        <img src="logo.jpg" alt="Logo book.ies">
         <div>
           <h1>BOOK.IES</h1>
           <span>Biblioteca IES Antonio Sequeros</span>
@@ -33,19 +33,21 @@
     <u>
       <h3>Accesos rápidos</h3>
     </u>
-      <a href="prestamos.html">Registrar préstamo</a>
-      <a href="libros.html">Añadir libro</a>
-      <a href="alumnos.html">Ver alumnos</a>
-      <a href="configuracion.html">Configuración</a>
-      <a href="reportes.html">Reportes</a>
-      <a href="usuarios.html">Usuarios</a>
+      <a href="prestamos.html">Registrar préstamo</a><br>
+      <a href="libros.html">Añadir libro</a><br>
+      <a href="alumnos.html">Ver alumnos</a><br>
+      <a href="configuracion.html">Configuración</a><br>
+      <a href="reportes.html">Reportes</a><br>
+      <a href="usuarios.html">Usuarios</a><br>
     </div>
+    <br>
+    <br>
     <div class="sidebar-section">
       <br>
       <h3>Información</h3>
       <p><strong>Centro:</strong> IES “Antonio Sequeros”</p>
-      <p><strong>Ubicación:</strong> Almoradi (Alicante) </p>
-      <p><strong>Versión:</strong> 1.0</p>
+      <p><strong>Ubicación:</strong> Almoradi (Alicante) </p><br>
+      <p><strong>Versión:</strong> 0.5</p><br>
     </div>
   </aside>
 
