--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       </div>
       <nav class="nav">
         <a href="index.html">Inicio</a>
-        <a href="prestamos.html">Gestión de Préstamos</a>
-        <a href="libros.html">Libros y Ejemplares</a>
+        <a href="http://localhost/Proyecto-Intermodular-2-ASIR/admin.php?table=PRESTAMOS">Gestión de Préstamos</a>
+        <a href="libros.php">Libros y Ejemplares</a>
       </nav>
     </div>
   </header>
@@ -62,12 +62,12 @@
         <div class="card">
           <h2>Gestión de Préstamos</h2>
           <p>Controla préstamos activos y registra nuevas solicitudes.</p>
-          <a class="btn" href="prestamos.html">Ir a préstamos</a>
+          <a class="btn" href="http://localhost/Proyecto-Intermodular-2-ASIR/admin.php?table=PRESTAMOS">Ir a préstamos</a>
         </div>
         <div class="card">
           <h2>Catálogo</h2>
           <p>Revisa todos los libros disponibles y su estado.</p>
-          <a class="btn" href="libros.html">Ver catálogo</a>
+          <a class="btn" href="http://localhost/Proyecto-Intermodular-2-ASIR/libros.php?table=EJEMPLARES&search=">Ver catálogo</a>
         </div>
       </section>
     </main>
